--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,133 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Roboto:ital,wght@0,100;0,300;1,100&display=swap");
+
+* {
+  font-family: Roboto;
+  box-sizing: border-box;
+  border-radius: 0;
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+#login-page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background: linear-gradient(45deg, rgb(240, 145, 145), rgb(227, 87, 87));
+}
+#form {
+  height: 100%;
+  background-color: rgb(227, 87, 87);
+  display: flex;
+  flex-direction: column;
+  height: 350px;
+  width: 300px;
+  border-radius: 10px;
+  box-shadow: 3px 1px 8px rgb(179, 78, 78);
+  padding: 10px;
+}
+.form-date {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 5% 25%;
+  box-shadow: 3px 1px 8px rgb(91, 91, 91);
+}
+#form form {
+  padding: 20px;
+  gap: 5px;
+  max-width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  padding: 6px;
+  border-radius: 10px;
+  text-align: center;
+  color: black;
+  background-color: transparent;
+}
+
+#products-page {
+  display: flex;
+  min-height: 100vh;
+  width: 100%;
+  flex-direction: column;
+  gap: 10px;
+}
+#container-list {
+  background-color: rgb(50, 51, 51);
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 10px;
+}
+
+.lista {
+  display: flex;
+  width: 150px;
+  height: 170px;
+  flex-direction: column;
+  gap: 10px;
+  background-color: rgb(227, 87, 87);
+  color: aliceblue;
+  box-shadow: 1px 1px 4px rgb(255, 136, 136);
+  border-radius: 5%;
+  text-align: center;
+  padding: 5px;
+}
+.lista:hover {
+  transition: 0.5s;
+  box-shadow: 1px 5px 5px rgb(160, 77, 77);
+  transform-style: preserve-3d;
+  transform: perspective(10cm) rotateX(-10deg) rotateY(-15deg);
+}
+.lista p {
+  color: rgb(238, 238, 238);
+  font-weight: 700;
+  background-color: grey;
+  border-radius: 10px;
+}
+
+.logout-button {
+  border-radius: 10px;
+  background-color: transparent;
+  display: flex;
+  gap: 2px;
+}
+.logout-button:hover {
+  background-color: red;
+  color: white;
+  border-color: transparent;
+  width: 5%;
+  box-shadow: 2px 1px 2px black;
+}
+select {
+  padding: 5px;
+  margin: 2px;
+  border-radius: 3px;
+  cursor: pointer;
 }
