--- a/src/index.css
+++ b/src/index.css
@@ -76,8 +76,8 @@ input {
   gap: 10px;
 }
 #container-list {
-  background-color: rgb(50, 51, 51);
-  min-height: 100vh;
+
+  height: 100%;
   width: 100%;
   display: flex;
   gap: 10px;
